# linuxprac

./: README.md
01_TerminalProject/: Makefile  Show.c
02_Multifile/: LICENSE  Makefile  README.md
03_Text/: randomize.sh
04_Debugging/: Makefile  output1.test  output2.test  range.c  test1.gdb  test2.gdb
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  move.c  remove.c
07_Enviromental/: Makefile.am  rhasher.c  run_config.sh
07_Environmental/: configure.ac
08_I18n/: Makefile.am  configure.ac  guess.c  orig.pot  russian.po
09_PatchDiff/: 1.patch  2.patch  3.patch  Makefile  maze_gen.c
11_Documenting/: Doxyfile.in  Makefile.am  configure.ac  guess.c  orig.pot  run_config.sh  russian.po
